# Picture-collector

./: .gitignore  INSTALLATION.md  Makefile  README.md  pyproject.toml
app/: Result.tif  engine.py
app/scripts/: collector.py
